--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,25 @@
+## Generic
+.DS_Store
+.idea
+
+## Nim
 nimcache/
 nimblecache/
 htmldocs/
-.DS_Store
+
+## Go
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
